블로그 링크작업

--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Kocri Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-    hiphop bibab sound
+        <div>
+            <h1><a href="">Kocri blog</a></h1>
+        </div>
+
+        <div>
+            <p1>published: 2017.05.15, 00:29</p1>
+            <h2><a href="">business</a></h2>
+            <p> 코크리 보털서비스 </p>
+            <p> 코딩 레벨 테스트 </p>
+            <p> 오프라인 코딩체험행사 </p>
+            <p> 글로벌 코딩교육프로그램 라이센스 비즈니스 </p>
+            <p> 코딩교육 강사육성 프로그램 </p>
+        </div>
     </body>
 </html>
