--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -19,5 +19,17 @@
             <p> 글로벌 코딩교육프로그램 라이센스 비즈니스 </p>
             <p> 코딩교육 강사육성 프로그램 </p>
         </div>
+
+        <div>
+            <h1>Kocri news</h1>
+        </div>
+
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_at }}</p>
+                <h1><a href="">{{ post.title }} </a></h1>
+                <p> {{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
