--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,13 +1,18 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Kocri Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'CSS/blog.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div>
-            <h1><a href="">Kocri blog</a></h1>
+            <h1><a href="/">Kocri blog</a></h1>
         </div>
 
         <div>
@@ -21,13 +26,13 @@
         </div>
 
         <div>
-            <h1>Kocri news</h1>
+            <h1><a href="/">Kocri news</a></h1>
         </div>
 
         {% for post in posts %}
             <div>
                 <p>published: {{ post.published_at }}</p>
-                <h1><a href="">{{ post.title }} </a></h1>
+                <h2><a href="">{{ post.title }} </a></h2>
                 <p> {{ post.text|linebreaksbr }}</p>
             </div>
         {% endfor %}
